Encourage German Militarism

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -17,6 +17,9 @@ GER_idea_rising_unions:0 "Rising Unions"
 GER_idea_rising_unions_desc:0 "§RWhilst this idea is active, major strikes will continue to occur§!"
 GER_rapid_urbanisation:0 "Rapid Urbanisation"
 GER_rapid_urbanisation_desc:0 ""
+GER_rapid_urbanisation_2:0 "Rapid Urbanisation"
+GER_rapid_urbanisation_2_desc:0 ""
+GER_encouraged_german_militarism:0 "Encouraged German Militarism"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
