--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -829,7 +829,7 @@
  ww1_france.43.d:0 "Despite global tensions, legislative elections are fundamental to the life of the Republic. In less than two months, the national assembly will be re-elected, redistributing the seats of power."
  ww1_france.44.t:0 "1918 Legislative elections"
  ww1_france.45.t:0 "Proudhonist Coup in France"
- ww1_france.45.d:0 "In a stunning move, French President of the Council of Ministers Georges Valois managed to get himself voted on full powers. Rewriting the constitution, the authoritarian leader announced his grandiose plans for France and has promised to restore French pride and national unity. \nThe new government has moved quickly to suppress any potential opposition, with reports of arrests and detentions of political dissidents. Many are now wondering what this new regime will mean for the future of French democracy.\nAs France enters this new era of nationalist-syndicalist rule, only time will tell what lies ahead. The nation is at a crossroads, and the actions of Valois and his government will have wide-ranging consequences for years to come."
+ ww1_france.45.d:0 "In a stunning move, French Prime Minister Georges Valois managed to get himself voted on full powers. Rewriting the constitution, the authoritarian leader announced his grandiose plans for France and has promised to restore French pride and national unity. \nThe new government has moved quickly to suppress any potential opposition, with reports of arrests and detentions of political dissidents. Many are now wondering what this new regime will mean for the future of French democracy.\nAs France enters this new era of nationalist-syndicalist rule, only time will tell what lies ahead. The nation is at a crossroads, and the actions of Valois and his government will have wide-ranging consequences for years to come."
  ww1_france.45.a:0 "Vive La France!"
  ww1_france.45.b:0 "A new force?"
  ww1_france.46.t:0 "Paul Déroulède death"
@@ -914,13 +914,13 @@
  ww1_france.69.l:0 "Jacques Piou can unite the right."
  ww1_france.69.m:0 "Maurice Pujo, a popular nationalist."
  ww1_france.71.t:0 "Ernest Monis Retires"
- ww1_france.71.d:0 "The President of the Council was recently the victim of an accident during the Paris-Madrid air race organized at the beginning of the summer. As a result, Enerst Monis had to resign, and President Fallières urgently appointed Joseph Caillaux."
+ ww1_france.71.d:0 "The prime minister was recently the victim of an accident during the Paris-Madrid air race organized at the beginning of the summer. As a result, Enerst Monis had to resign, and President Fallières urgently appointed Joseph Caillaux."
  ww1_france.71.b:0 "Since Caillaux is in jail, lets appoint Ribot"
  ww1_france.72.t:0 "Aristide Briand Retires"
- ww1_france.72.d:0 "For personal reasons, President of the Council Aristide Briand has decided to step down. President Fallières has thus appointed a new president of the council."
+ ww1_france.72.d:0 "For personal reasons, prime minister Aristide Briand has decided to step down. President Fallières has thus appointed a new prime minister."
  ww1_france.73.t:0 "[FRA.GetLeader] Retires"
  ww1_france.73.d:0 "Prime Minister [FRA.GetLeader]'s [GetYear] mandate has ended. It is time to choose your successor among the most popular representatives of the Democratic parties."
- ww1_france.731.d:0 "President of the Council [FRA.GetLeader] resigned to make way for Louis Barthou, an old friend of Poincaré, but also a former minister."
+ ww1_france.731.d:0 "Prime minister [FRA.GetLeader] resigned to make way for Louis Barthou, an old friend of Poincaré, but also a former minister."
  ww1_france.80.d:0 "He refuses to run in presidential election and resigned from the presidency of the Council. His successor is Alexandre Millerand."
  ww1_france.81.t:0 "Vote for Weapons Reliability Law"
  ww1_france.81.d:0 "The parliament currently votes on a bill to regulate the production of weapons. The bill would impose a restructuring of industrial arms chains. Passage of this regulation would seriously slow down our production over half a year."
@@ -1249,7 +1249,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  deschannel_fall_troll:0 "What fucking effect you imagined ?!"
 
  ww1_france.280.t:0 "Aristide Briand Prime Minister"
- ww1_france.280.d:0 "Aristide Briand was appointed president of the council, equivalent to the position of prime minister. Following his appointment, he organized a new government."
+ ww1_france.280.d:0 "Aristide Briand was appointed prime minister, equivalent to the position of prime minister. Following his appointment, he organized a new government."
  ww1_france.280.a:0 "He always comes back"
 
  ww1_france.281.t:0 "Radio Tour Eiffel"
@@ -1257,7 +1257,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_france.281.a:0 "Ici la Station Radiotéléphonique de la Tour Eiffel!"
 
  ww1_france.282.t:0 "Aristide Briand Resigned"
- ww1_france.282.d:0 "The president of the council resigned and was replaced by Raymond Pointcaré, largely trained in the position due to his numerous other appointments before and during the war."
+ ww1_france.282.d:0 "The prime minister resigned and was replaced by Raymond Pointcaré, largely trained in the position due to his numerous other appointments before and during the war."
  ww1_france.282.a:0 "Good Luck!"
 
  ww1_france.283.t:0 "France Want Faster Compensation From Germany"
@@ -1860,7 +1860,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.418.a:0 "Thanks God."
 
  ww1_france.419.t:0 "Bloody Riots in Paris"
- ww1_france.419.d:0 "The situation has become tense in Paris. New demonstrations are organized daily to protest against the revision of the 1905 law; socialist activism has never been so strong in the country. Despite their minority, trade unionists and other supporters of the left managed to organize large blockades in the main arteries of the city.\n\nThe police, seeking to clear the way, quickly had to use firearms to disperse the crowd. Unfortunately, SFIO activists, notably anarchists, were also equipped with rifles. Exchanges took place, resulting in the death of 9 police officers and 5 demonstrators."
+ ww1_france.419.d:0 "The situation has become tense in Paris. New demonstrations are organized daily to protest against the revision of the 1905 law, socialist activism has never been so strong in the country. Despite their minority, trade unionists and other supporters of the left managed to organize large blockades in the main arteries of the city.\n\nThe police, seeking to clear the way, quickly had to use firearms to disperse the crowd. Unfortunately, SFIO activists, notably anarchists, were also equipped with rifles. Exchanges took place, resulting in the death of 9 police officers and 5 demonstrators."
  ww1_france.419.a:0 "Oh, no..."
  ww1_france.419.b:0 "We shouldnt escalate this"
 
@@ -6791,7 +6791,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_russia.29.d:0 "We are starting preparations for the elections to the Duma. The government’s goal is to weaken the Republican opposition without provoking a political crisis. The Russian government will not survive the next revolution."
  ww1_russia.29.a:0 "Don't allow the left-wing to win!"
  ww1_russia.30.t:0 "Military Exhibition in Petersburg"
- ww1_russia.30.d:0 "Russia invites you to a military exhibition in St. Petersburg, where it will present the latest developments to the show to its allies. [RUS.GetLeader] and his government want to strengthen cooperation of military developments, and will be glad if we also share our inventions."
+ ww1_russia.30.d:0 "Russia invited us to a military exhibition in St. Petersburg, where it will present the latest developments to the show to its allies. [RUS.GetLeader] and his government want to strengthen cooperation of military developments, and will be glad if we also share our inventions."
  ww1_russia.30.a:0 "We accept the invitation"
  ww1_russia.30.b:0 "We have better things to do"
  ww1_russia.31.t:0 "Social Revolutionaries return to the Duma"
