--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6948,6 +6948,8 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
  FRA_300_seats:0 "Control 300 seats"
  FRA_350_seats:0 "Control 350 seats"
 
+ FRA_300_seats_no_union:0 "Control 300 seats\n§R(This law directly attack the §OParliamentary Left§!, so even with §YUnion Sacrée§!, we still need the requested seats to pass the law)§!"
+
  FRA_150_seats_n:0 "Control less than 150 seats"
  FRA_200_seats_n:0 "Control less than 200 seats"
  FRA_250_seats_n:0 "Control less than 250 seats"
