part of Napoléon tree

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1277,6 +1277,7 @@
  FRA_georges_clemenceau:0 "Georges Clemenceau"
  FRA_napoleon_v:0 "Victor Napoléon Bonaparte"
  FRA_napoleon_vi:0 "Napoléon VI"
+ FRA_louis_joseph_bonaparte:0 "Louis Joseph Bonaparte"
  FRA_philippe_viii:0 "Philippe VIII"
  FRA_jean_iii:0 "Jean III"
  FRA_jean_iii_desc:0 "Jean Pierre Clément Marie d'Orléans de Chartres, Duke of Guise and Prince of France, remains to this day the most popular heir among the competing houses. Having served for the Red Cross during the war and having been massively displayed by the government as a figure of unity for the French; he benefits from an exceptional aura which earns him the trust of the working classes."
