--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7393,6 +7393,46 @@ FRA_instrumentalize_the_senate_desc:0 "The Senate is not suited to a modern admi
 FRA_bonapartiste_referundum:0 "Restoration Referundum"
 FRA_bonapartiste_referundum_desc:0 "The will of the people, of parliament and of the government goes in the same direction: The restoration of the French empire. Now that all legal apparatuses are under our control, we can launch a referendum won in advance to justify our action."
 
+FRA_ministery_of_national_defense:0 "Ministery of National Defense"
+FRA_ministery_of_national_defense_desc:0 "Emperor Napoleon wanted to create a ministry of national defense managed by his brother, Louis Joseph Bonaparte. The role of this ministry would be to replace the Ministry of Defense by giving it a military component and no longer just a political one."
+
+ FRA_legacy_of_the_garde:0 "Legacy of the Garde"
+ FRA_legacy_of_the_garde_desc:0 "By reconnecting with its glorious past, the army follows in the footsteps of the first and second empire towards glory. The soldiers are invigorated and the imperialist officers are placed in the front ranks."
+
+ FRA_maintain_war_industry:0 "Maintain War Industry"
+ FRA_maintain_war_industry_desc:0 "Maintaining a large army will only be possible by having a corresponding production of equipment. The share of the budget allocated by the government will therefore be increased to around 6% of the national budget."
+
+ FRA_three_plan_battle:0 "Three Plan Battle"
+ FRA_three_plan_battle_desc:0 "The air component was essential to the French victory. Research and production efforts must be maintained in order to design an indestructible fleet."
+
+ FRA_militarize_bon_du_tresor:0 "Militarize the Bons du Trésor"
+ FRA_militarize_bon_du_tresor_desc:0 "In order to maintain good production capacity, the state can go into debt by generating treasury bonds sent to French companies. This voucher is a guarantee of payment over time which allows us to consolidate our expenses in the short term."
+
+ FRA_modernize_armored_corps:0 "Modernize Armored Corps"
+ FRA_modernize_armored_corps_desc:0 "Armored forces played an essential role in France's victory. It is important to maintain a large mechanized and motorized force capable of destroying any adversary fortification while achieving superior mobility."
+
+ FRA_challenge_albion:0 "Challenge Albion"
+ FRA_challenge_albion_desc:0 "Although the French navy is one of the most powerful in the world, it remains weaker than the royal navy. The state must provide additional funds to the navy intended to strengthen its capabilities and enable its expansion."
+
+ FRA_napoleon_class:0 "Napoléon Class"
+ FRA_napoleon_class_desc:0 "The combination of sea and air forces will provide a unique advantage to France in future wars. A huge aircraft carrier bearing the image of the emperor will increase our projection capabilities."
+ FRA_jeanne_darc_ship:0 "§L(Jeanne D'Arc)§!"
+ FRA_paul_deroulede_ship:0 "§L(Paul Deroulède)§!"
+ ship_40_percent:0 "The ship will be §Y40%§! completed."
+ ship_60_percent:0 "The ship will be §Y60%§! completed."
+
+ FRA_jeanne_darc_class:0 "Lay Down Jeanne d'Arc Class"
+ FRA_jeanne_darc_class_desc:0 "Innovations in the construction of battleships allow the development of new, faster and more efficient models."
+
+ FRA_annexation_of_sarre:0 "Annexation of the Sarre"
+ FRA_annexation_of_sarre_desc:0 "Germany will never be able to pay the repairs requested by France and persists in delaying any payment deadline, going so far as to sabotage the organization of its own national production to slow us down. This unacceptable situation pushes us to look for alternative solutions to compensate for the immense German debts."
+
+ FRA_dismantle_the_rhine:0 "Dismantle the Rhine"
+ FRA_dismantle_the_rhine_desc:0 "Dismantle the Rhine"
+
+ FRA_interwar_latin_alliance:0 "Latin Alliance"
+ FRA_interwar_latin_alliance_desc:0 ""
+
  FRA_interwar_rural_investments:0 "Rural Investments"
  FRA_interwar_rural_investments_desc:0 "The budget surplus caused by the payment of German reparations makes it possible to revitalize our rural economy and revive our heavy industry."
  FRA_ww1_memel_occupation:0 "Withdraw from Memelland?"
