mining explosions changed to coal wars

--- a/localisation/english/ww1_usa_focus_l_english.yml
+++ b/localisation/english/ww1_usa_focus_l_english.yml
@@ -403,8 +403,8 @@ ww1_USA.34.a:0 "We will give our regrets to the victims."
   USA_smuggle_guns_to_revolutionaries:0 "Smuggle Guns Across the Border"
   USA_poor_labour_rights:0 "Very Poor Labour Rights"
   USA_poor_labour_rights1:0 "Poor Labour Rights"
-  USA_mining_explosions:0 "Mining Explosions"
-  USA_mining_explosions2:0 "Mining Explosions"
+  USA_mining_explosions:0 "Coal Wars"
+  USA_mining_explosions2:0 "Coal Wars"
   USA_designate_alaskan_land_for_reservation:0 "Designate Alaskan Land for Reservation"
   USA_designate_californian_land_for_reservation:0 "Designate Californian Land for Reservation"
   USA_designate_montanian_land_for_reservation:0 "Designate Montanan Land for Reservation"
