--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -395,8 +395,8 @@
  USA_democratic_party_N:0 "Democratic Party"
  USA_republican_party_N:0 "Republican Party"
  USA_republican_party:0 "Republican Party"
- USA_fascism_party:0 "United States Military Junta"
- USA_neutrality_party:0 "United States Military Junta"
+ USA_fascism_party:0 "Unorganized Extremist Groups"
+ USA_neutrality_party:0 "Various Third Parties"
 
  USB_communism_party:0 "Socialist Party"
  USB_communism_party_long:0 "Socialist Party of America"
