--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6267,26 +6267,26 @@ ww1_USA.124.t:0 "New York Stock Exchange Closes"
 ww1_USA.124.d:0 "It seems the reality of the Great War is starting to have its effects on America. Today, the New York stock exchange announced it will be temporarily closing for the foreseeable future. They comes as the Treasury Secretary pressured the closure to prevent foreign countries from buying American gold. This is sadly having a great impact on the American economy, which is beginning to slide back into the recession we just started to come out of."
 ww1_USA.124.a:0 "All of this because of some dumb European war over lines on a map?"
 
-ww1_USA.125.t:0 "Coal mine strike begins in West Virginia!"
-ww1_USA.125.d:0 "Paint Creek–Cabin Creek strike of 1912"
-ww1_USA.125.a:0 ""
+ww1_USA.125.t:0 "Paint Creek-Cabin Creek Strike"
+ww1_USA.125.d:0 "While coal strikes are not at all uncommon in West Virginia, an unusually large and violent one has broken out in Kanawha County, West Virginia. This comes as workers in the area demanded the same levels compensation as workers in other area. With the local coal companies refusing, the area has broken out in protests and strikes. Several socialist organizations have already declared their support for the strikers, promising to financially back the strikers for however long it takes. The strike is quickly expanding, with over 5,000 miners from the north side of the Kanawha River joining their comrades in Kanawha county. Martial law has already been declared by governor Glasscock, and local clashes have began breaking out."
+ww1_USA.125.a:0 "Can these damn strikers go one day without being a nuisance?"
 ww1_USA.126.t:0 "End of the Paint Creek-Cabin Creek Strike"
-ww1_USA.126.d:0 "Paint Creek–Cabin Creek strike of 1912"
+ww1_USA.126.d:0 "The infamous Paint Creek-Cabin Creek strike has finally came to end today with the announcement of the Kern Resolution being seen as an acceptable concession towards the workers. The strike has lead to the death of 75 people as well as martial law in the state of West Virginia. Needless to say, all parties involved are glad to see an end to the bloodshed."
 ww1_USA.126.a:0 ""
-ww1_usa.127.t:0 "Copper Country Strike in Michigan!"
-ww1_usa.127.d:0 "Copper Country strike of 1913–1914"
+ww1_usa.127.t:0 "Coal Wars Spread to Michigan!"
+ww1_usa.127.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.127.a:0 ""
 ww1_usa.128.t:0 "End of the Copper Country Strike"
-ww1_usa.128.d:0 "Copper Country strike of 1913–1914"
+ww1_usa.128.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.128.a:0 ""
 ww1_usa.129.t:0 "Coal Mine Strike begins in Colorado!"
-ww1_usa.129.d:0 "Colorado Coalfield War"
+ww1_usa.129.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.129.a:0 ""
 ww1_usa.130.t:0 "Battles fought in Colorado Strikes"
-ww1_usa.130.d:0 "Colorado Coalfield War"
+ww1_usa.130.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.130.a:0 ""
 ww1_usa.131.t:0 "End of the Colorado Coal Strikes"
-ww1_usa.131.d:0 "Colorado Coalfield War"
+ww1_usa.131.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.131.a:0 ""
 ww1_USA_wilson.26.t:0 "A National Day of Praying For the End of The Great War?"
 ww1_USA_wilson.26.d:0 "With the reality that the Great War in Europe is not going to end any time soon setting in, the general mood of America is that of disappointment in the failure of a peaceful option. Most in America simply wish for a peace deal with no territorial changes, and for Europe to sort out its rivarlies./n/nPresident Wilson also shares these feelings, and despite his attempts to bring Europe together for a peace treaty, Europes leaders have only responded with half hearted responses or no response at all. Thus, Wilson has personally thought of the idea of declaring a day for prayer of peace in Europe. Of course theres no chance Europe will seek out a peaceful end to the war at this point, but declaring a day for prayer of peace would be a nice symbolic gesture to Americas commitment for world peace, and its commitment to neutrality."
