--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6594,7 +6594,7 @@ japan_will_remember_this:0 "Japan will take note of our defense of their citizen
 political_professor:0 "Political Professor"
 ww1_USA.117.a:0 "..."We have a lot of campaigning to do, don't we""
 ww1_USA.117.b:0 "..."Oh golly! Is that a group of eight lions charging towards us?""
-riding_razor.tt:0 "This section of the tree is important for shifting the Republican party towards our prefered direction, increasing the £pol_power §HPolitical Power§! we gain by boosting or reducing the influence sides who support or oppose us."
+riding_razor.tt:0 "It's recommended you complete this branch fast or else you will suffer from very low £pol_power §HPolitical Power§!."
   ww1_USA.42.b:0 "Let's meet with these companies and try to pressure them not to."
   ww1_USA.43.t:0 "Railway Companies Agree to Abandon Price Hikes"
   ww1_USA.43.d:0 "It seems Taft has been able to convinve railway companies to abandon their spiking of prices, with the explanation that it would reduce railway usage and result in less profit convincing the railway company leaders. This will definitely be a political win for taft."
