--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1394,7 +1394,7 @@ stabilize_dom:0 "A §Gstable§! Dominican Republic is a Dominican Republic ripe 
 appointcon:0 "Taking this decision will §Yreduce progressive Republican§! influence, §Yincrease Conservative republican§! influence and loyalty, as well as giving §Ypolitical power§! and §Ystability§!."
 masses:0 "§RDenouncing these publishments will only give them more attention...§!"
 glacier:0 "The opening of this new park will greatly §Gincrease§! tourism to Montana. This economic growth will be represented by:"
-boll:0 "§YThis may have future§! §Gbenefits§!"
+boll:0 "This may have future §Gbenefits§!"
 taftbad:0 "This policy is §Oinconsistent§! with president Taft's previous policies, therefore we will recieve the following §Rpenality§!"
 stop_roosevelt:0 "§YProgressive Republican§W loyalty is above §Y80§!, OR §YProgressive Influence§! is below §Y15§! "
 USA_commies_support_taft:0 "Increases Loyalty of the §YProgressive Republicans§W by 5"
