--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2696,7 +2696,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
  CHL_FAMAE_Artillery:0 "FAMAE-Artillery"
  CHL_FAMAE_Artillery_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
- CHL_ASMAR:0 "ASMAR"
+ CHL_ASMAR:0 "Arsenales De Marina"
  CHL_ASMAR_desc:0 "ASMAR (Astilleros y Maestranzas de la Armada de Chile) is a Chilean state-owned shipbuilding company,  was established in 1895"
  CHL_FORD:0 "Ford Chile"
  CHL_Ellington_and_co:"Ellington And Co"
