Simpler debt renunciation

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -202,7 +202,7 @@
  RUS_modify_external_debt_tt: "Modify §YNational Debt§! by \nConsumer Goods Factories factor: [?RUS_modify_external_debt_var|.1Y%=]"
  RUS_modify_resources_to_market_tt: "Modify §YNational Debt§! by \nResources to Market: [?RUS_modify_external_debt_var|.0Y%=]"
  RUS_modify_external_debt_and_resources_tt: "Modify §YNational Debt§! by \nConsumer Goods Factories factor: [?RUS_modify_external_debt_var|.1Y%=]\nResources to Market: [?RUS_modify_external_debt_var|.0Y%=]\nModify §YExternal Debt§! to [FROM.GetFlag]§Y[FROM.GetName]§! by \nConsumer Goods Factories factor: [?RUS_modify_external_debt_var|.1Y%=]"
- RUS_renounce_debt_tt: "Modify §YNational Debt§! by \nConsumer Goods Factories factor: §Y-§![?RUS_modify_external_debt_var|.1Y%]\nResources to Market: §Y-§![?RUS_modify_external_debt_var|.0Y%]\nModify §YExternal Debt§! to [FROM.GetFlag]§Y[FROM.GetName]§! by \nConsumer Goods Factories factor: §Y-§![?RUS_modify_external_debt_var|.1Y%]"
+ RUS_renounce_debt_tt: "§RWe will renounce all of our National Debt to [FROM.GetFlag][FROM.GetName]§!"
  RUS_modify_debt_to_FROM_tt: "Modify §YExternal Debt§! to [FROM.GetFlag]§Y[FROM.GetName]§! by \nConsumer Goods Factories factor: [?RUS_modify_external_debt_var|.1Y%=]"
  RUS_currently_issuing_domestic_bonds: "Currently issuing domestic bonds"
  RUS_currently_taking_out_loan: "Currently taking out loan"
