--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6593,7 +6593,7 @@ ww1_USA.117.d:0 "Former president Theodore Roosevelt has been taking a vacation 
 japan_will_remember_this:0 "Japan will take note of our defense of their citizens in future negotiations..."
 political_professor:0 "Political Professor"
 ww1_USA.117.a:0 "..."We have a lot of campaigning to do, don't we""
-ww1_USA.117.b:0 "..."Oh golly! Is that a group of eight lions charging towards us?""
+ww1_USA.117.b:0 "..."Oh goodness me! Is that a group of eight lions charging towards us?""
 riding_razor.tt:0 "It's recommended you complete this branch fast or else you will suffer from very low £pol_power §HPolitical Power§!."
   ww1_USA.42.b:0 "Let's meet with these companies and try to pressure them not to."
   ww1_USA.43.t:0 "Railway Companies Agree to Abandon Price Hikes"
