--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -686,7 +686,7 @@ USA_southern_dockyards:0 "Southern Dockyards"
 USA_eliminate_the_progressive_challengers:0 "Secure Control of the Party"
 USA_get_action:0 "Reinstate the House Dictatorship"
 USA_8_hour_work:0 "8 Hour Workweek"
-USA_8_hour_work_desc:0 "Americans are overworked as it stands today. There is no reason why Americans should have to spend 10 hours+ a day working, when most studies show that a workers productivity falls off massively after the 8th hour. It's time to finally implement a national 8 hour workweek."
+USA_8_hour_work_desc:0 "Americans are overworked as it stands today. There is no reason why Americans should have to spend 10 hours a day working, when most studies show that a workers productivity falls off massively after the 8th hour. It's time to finally implement a national 8 hour workweek, which has shown success in corporations who have already implemented it."
  ENG_The_Best:0 "The Best"
  ENG_The_Best_desc:0 "We have the best machinery in the world."
  ENG_The_Brightest:0 "The Brightest"
