Party plurality scripted trigger

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -13,6 +13,10 @@
  neutrality:0 "Authoritarian"
  neutrality_noun:0 "Authoritarianism"
  neutrality_desc:0 "Authoritarian Regime"
+ communism_plurality:0 "§R[ROOT.GetCommunistParty]§! is the most popular party"
+ democratic_plurality:0 "§C[ROOT.GetDemocraticParty]§! is the most popular party"
+ neutrality_plurality:0 "§g[ROOT.GetNeutralParty]§! is the most popular party"
+ fascism_plurality:0 "§q[ROOT.GetFascistParty]§! is the most popular party"
 
  #Authoritarian
 
