--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8889,3 +8889,11 @@ FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
 FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
 FRA_effect_if_law_pass:0 "\n§YEffect if the vote pass :§!"
 FRA_effect_if_law_fail:0 "\n§REffect if the vote fail :§!"
+
+
+FRA_fufill_schneider_contract:0 "Fulfill Schneider Contract"
+FRA_fufill_schneider_contract_desc:0 "The government awarded the company Schneider Creusot and its sub-subsidiary Somua a contract to produce 400 medium combat tanks intended to complete the mechanized force validated by the general staff."
+medium_tanks_on_the_field:0 "([?num_equipment_in_armies@medium_tank_chassis] §YMedium Tanks§! are actually on the field)"
+FRA_produce_400_schneider_tanks:0 "400 §YMedium Tanks§! are on the field"
+
+to_complete_mission:0 "§YTo Complete the Mission:§!"
