--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6274,8 +6274,8 @@ ww1_USA.126.t:0 "End of the Paint Creek-Cabin Creek Strike"
 ww1_USA.126.d:0 "The infamous Paint Creek-Cabin Creek strike has finally came to end today with the announcement of the Kern Resolution being seen as an acceptable concession towards the workers. The strike has lead to the death of 75 people as well as martial law in the state of West Virginia. Needless to say, all parties involved are glad to see an end to the bloodshed."
 ww1_USA.126.a:0 ""
 ww1_usa.127.t:0 "Coal Wars Spread to Michigan!"
-ww1_usa.127.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
-ww1_usa.127.a:0 ""
+ww1_usa.127.d:0 "Miners in Copper Country, located in the Upper Peninsula of Michigian, have gone on strike over various issues. These include almost tyrannical control over worker's lives due to the unfair policies in company towns, the one-man drill causing unsafe working conditions and unemployment, long hours, low wages, and the usage of children in mines. Those on strike joined the Western Federation of Miners, and a referendum was put into effect after 8,000 workers voted upon it, causing the local economy to collapse."
+ww1_usa.127.a:0 "We need action!"
 ww1_usa.128.t:0 "End of the Copper Country Strike"
 ww1_usa.128.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
 ww1_usa.128.a:0 ""
