--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -683,6 +683,7 @@ USA_unity_of_the_republicans:0 "Unity of the Republican Party"
 USA_from_speaker_to_president:0 "From Speaker to President"
 USA_southern_dockyards:0 "Southern Dockyards"
  #continue from here
+USA_support_automobile_giants_desc:0 "Several new automobile manufacturer have been springing up as of late. As the future of transportation, we must do what we can to support these manufacturers and expand the automobile market."
 USA_eliminate_the_progressive_challengers:0 "Secure Control of the Party"
 USA_get_action:0 "Reinstate the House Dictatorship"
 USA_8_hour_work:0 "8 Hour Workweek"
@@ -1061,7 +1062,8 @@ progressives_less_40.tt:0 "The coalition ideology is less §Sreformist§! then 4
 USA_mantain_the_party_line:0 "The Parties Commanding Might"
 USA_slash_the_tarrifs:0 "Moderate Tariff Reduction"
 USA_slash_the_tarrifs_desc:0 "From the mom in Houston purchasing abnormally expensive produce at the grocerry store to the small business owner in Ohio struggling to buy steel, Tafts tariff policy has hurt everyone. A long overdue reduction to the tariff is required to ensure prices for the consumer are kept low."
-
+USA_advancements_of_the_free_market:0 "The Necessity of Modernization"
+USA_advancements_of_the_free_market_desc:0 "The American military technological sector is severly behind other nations. Groups like the war preparedness campaign have been bringing attention to this, and we must work towards solving the issue. Let us increase funding to military research institutes."
 USA_mantain_the_party_line_desc:0 "While Roosevelt personally may support keeping some trusts, most progressives dont. It would be a disapointment to much of his base and his supporters in congress to completly go against their ideas, and thus, he will have to concede to the New Nationalist Union on this issue. Wide reaching anti trust legislation must be passed, to ensure a free market."
 USA_concentration_in_industry_desc:0 "As Roosevelt has said, concentration of industries into a few very productive companies is just the natural evolution of a free market economy, and often benefits the consumer. If a company is very fast at producing a product, and is selling that product at a acceptable rate, then why should the government break that company up? We should instead encourage these companies."
 USA_8_hour_railway_work_week_desc:0 "With protests erupting in pennsylvania by railway workers tired of poor conditions, there's no better time then now to introduce one of the core promises of New Nationalism: an 8 hour work week. While we can't get a national 8 hour work week for now, pressure is high on congress to pass some sort of reform for Railway workers, so an 8 hour work week for them only should pass."
@@ -1186,6 +1188,7 @@ if_inher.tt:0 "When this focus is selected:\nActivate mission: §YInheritance Ta
 USA_fight_opiates:0 "Regulate Distribution of Narcotics"
 USA_fight_opiates_desc:0 "Many Americans, especially in rural areas, struggle with addiction. These addictions are causing widespread overdose and increasing poverty across the nation. A law banning prescribing maintenance doses for narcotics unless intended to cure the patient's addiction would help with this."
 USA_urban_investments:0 "Profit from Narcotic Tax"
+USA_urban_investments_desc:0 "On the counter narcotics currently have no tax on them. As a widely used medical prescription, this is a huge missed opprotunity for revenue. Let us encourage the use of narcotics, but implement a tax on them."
 if_minimum_wage_pass.tt:0 "If the legislation passes:\nModify §YNew Nationalism§! by:\nConsumer Goods Factories factor: §Y+4.0%§!\nStability: §G+8.00%§!\nPolitical Power Gain: §G+5.00%§!\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 USA_modest_re_armement_program:0 "Modest Rearmament Program"
 USA_modest_re_armement_program_desc:0 "While we do need to prepare the United States for possible conflict in the future, we cannot rock the boat too much. Let's set a moderate amount of funds aside to invest in the war industry, and ensure America will be safe."
@@ -1301,7 +1304,7 @@ USA_the_resources_of_war_desc:0 "The United States is full of untapped goldmines
  USA_lease_lands_to_private_companies:0 "Lease Land to Private Companies"
   USA_lease_lands_to_private_companies_desc:0 "Companies are more efficent then any Washington agency could be. Let's offer to sell some public lands to private companies who wish to look for natural resources."
   USA_federal_farm_loans:0 "Federal Farm Loans"
-  USA_federal_farm_loans_desc:0 "We must strengthen investments in farmers and agriculture. Setting up easy to access cheap loans to farmers will help the agricultural industry and thus all americans."
+  USA_federal_farm_loans_desc:0 "We must strengthen investments in farmers and agriculture. American farmers have been facing financial hardship as of late, and thus setting up easy to access cheap loans to farmers will help the agricultural industry and thus all Americans."
   USA_dont_forget_the_little_man:0 "Don't Forget the Little Man!"
 USA_new_agriculture_methods:0 "New Agriculture Methods"
 USA_new_agriculture_methods_desc:0 "Modern America needs more and more food production, and several breakthroughs in agricultural methods have been discovered as of late. To expand information of these agricultural methods, we will fund new colleges in rural America."
