--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2178,6 +2178,9 @@ socialism_banned:0 "Socialism Banned"
  CHI_union_in_power:0 "United Unions of Chinese Workers"
  
  #USA
+USA_economic_downturn:0 "Economic Downturn"
+USA_economic_downturn6:0 "A Return to Normalcy"
+USA_economic_downturn7:0 "Foreign Loans"
 USA_divided_republican_party:0 "Divided Republican Party"
  USA_idea_volunteer_corps:0 "Volunteer Corps"
  USA_idea_faith_act:0 "Faith Act"
