--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -20,7 +20,7 @@
  democratic_plurality:0 "$party_democratic_name$ is the most popular party"
  neutrality_plurality:0 "$party_neutrality_name$ is the most popular party"
  fascism_plurality:0 "$party_fascism_name$ is the most popular party"
- party_communism_name:0 "R[ROOT.GetCommunistParty]§!"
+ party_communism_name:0 "§R[ROOT.GetCommunistParty]§!"
  party_democratic_name:0 "§C[ROOT.GetDemocraticParty]§!"
  party_neutrality_name:0 "§g[ROOT.GetNeutralParty]§!"
  party_fascism_name:0 "§q[ROOT.GetFascistParty]§!"
