--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8204,6 +8204,7 @@ USA_lease_land_tt:0 "We will unlock decisions giving £pol_power §YPolitical Po
 USA_lease_utah_land_for_tungsten:0 "Lease Utah Land to Reade Advanced Materials"
 USA_lease_new_mexico_aluminium:0 "Lease Land to Alcoa for Aluminium Smelting in New Mexico"
 USA_lease_nevada_land_mining:0 "Lease Nevada Land to Robinson Mine Company"
+ENG_economic_collapse:0 "Economic Collapse"
 USA_lease_california_aluminium_plants:0 "Lease California Aluminium Plants to Alcoa"
 USA_lease_oregon_land_for_mining:0 "Lease Oregon Land to Reade Advanced Materials for Chromium Mining"
 USA_enforce_price_discrimination:0 "Against Price Discrimination"
