--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -486,6 +486,9 @@
  ENG_Support_Nigerian_Christ:0 "Support Nigerian Christians"
  ENG_Support_Nigerian_Christ_desc:0 "Nigeria stands divided, its soul torn between Islamists and Christians. In this crucible of faith, supporting our Christian brethren becomes a moral imperative, ensuring stability and maintaining the Empire’s influence."
  ENG_Dominion_Investment:0 "Dominion Investment"
+USA_british_request_loans:0 "Britain has Requested American Loans"
+ENG_sell_american_assets:0 "Sell American Assets"
+ENG_sell_american_assets_desc:0 "It's became obvious that The Great War is not going to end any time soon. With the failure of a quick victory for any side, the financial burden of the war is starting to grow, and we must consider our oppositions for quick cash. We have many British owned assets in America, and we should sell them to finance the war."
  ENG_Dominion_Investment_desc:0 "The Dominions of our Great Empire, extensions of our imperial might, deserve our unwavering support and investment. Through strategic infusion of resources, we ensure their prosperity and, by extension, the prosperity of the Empire."
  ENG_Investment_Aus:0 "Investment in Australia"
  ENG_Investment_Aus_desc:0 "Australia, our sentinel in the Pacific, holds a position of strategic importance within the Empire. Investing in its development ensures a stronghold that stands ready to face any challenge."
@@ -1304,7 +1307,7 @@ USA_the_resources_of_war_desc:0 "The United States is full of untapped goldmines
  USA_lease_lands_to_private_companies:0 "Lease Land to Private Companies"
   USA_lease_lands_to_private_companies_desc:0 "Companies are more efficent then any Washington agency could be. Let's offer to sell some public lands to private companies who wish to look for natural resources."
   USA_federal_farm_loans:0 "Federal Farm Loans"
-  USA_federal_farm_loans_desc:0 "We must strengthen investments in farmers and agriculture. American farmers have been facing financial hardship as of late, and thus setting up easy to access cheap loans to farmers will help the agricultural industry and thus all Americans."
+  USA_federal_farm_loans_desc:0 "We must strengthen infvestments in farmers and agriculture. American farmers have been facing financial hardship as of late, and thus setting up easy to access cheap loans to farmers will help the agricultural industry and thus all Americans."
   USA_dont_forget_the_little_man:0 "Don't Forget the Little Man!"
 USA_new_agriculture_methods:0 "New Agriculture Methods"
 USA_new_agriculture_methods_desc:0 "Modern America needs more and more food production, and several breakthroughs in agricultural methods have been discovered as of late. To expand information of these agricultural methods, we will fund new colleges in rural America."
