--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6273,8 +6273,12 @@ ww1_USA.125.a:0 "Can these damn strikers go one day without being a nuisance?"
 ww1_USA.126.t:0 "End of the Paint Creek-Cabin Creek Strike"
 ww1_USA.126.d:0 "The infamous Paint Creek-Cabin Creek strike has finally came to end today with the announcement of the Kern Resolution being seen as an acceptable concession towards the workers. The strike has lead to the death of 75 people as well as martial law in the state of West Virginia. Needless to say, all parties involved are glad to see an end to the bloodshed."
 ww1_USA.126.a:0 ""
+ENG_finance_crisis:0 "Financial Strain of The Great War"
 ww1_usa.127.t:0 "Coal Wars Spread to Michigan!"
 ww1_usa.127.d:0 "Miners in Copper Country, located in the Upper Peninsula of Michigian, have gone on strike over various issues. These include almost tyrannical control over worker's lives due to the unfair policies in company towns, the one-man drill causing unsafe working conditions and unemployment, long hours, low wages, and the usage of children in mines. Those on strike joined the Western Federation of Miners, and a referendum was put into effect after 8,000 workers voted upon it, causing the local economy to collapse."
+ww1_england.265.t:0 "Financing The Entente"
+ww1_england.265.d:0 "As the country with the deepest financial markets and strongest credit rating, as well as the financial hub of the world, our dominions and allies have looked towards us as the financial backer of the war. Indeed, we do have an obligation to help our dominions at the minimum, and this won't be cheap. While the economic super power of the world, we do not have infinite money, and there is a real risk that if the war does not end quickly then we will have to take unwanted measures, like selling assets or even getting loans from the Americans."
+ww1_england.265.a:0 "Not a problem, the war will be over by Christmas"
 ww1_usa.127.a:0 "We need action!"
 ww1_usa.128.t:0 "End of the Copper Country Strike"
 ww1_usa.128.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
