State Council elections debug

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -23,10 +23,11 @@
  RUS_if_the_law_is_rejected: "\nIf the law is §Rrejected§!:"
  RUS_if_the_law_passes_in_sc: "\nIf the law §Gpasses§! in the §YState Council§!:"
  RUS_if_the_law_passes_in_sd: "\nIf the law §Gpasses§! in the §YState Duma§!:"
-
  RUS_law_available_for_state_council: "The vote will be available in the §YState Council§!."
  RUS_law_has_to_be_passed_again: "The law has to be passed again in the §YState Duma§!.\n"
  RUS_test_number_of_loyalty: "[?far_right]"
+
+ RUS_state_council_election_tt: "Based on the current party popularities, we're expecting [RUS_state_council_election_winning_party] to be the dominant faction in the §YState Council§! after the election."
  RUS_likely_to_pass: "§GThe law is likely to pass§!"
  RUS_likely_to_be_rejected: "§RThe law is likely to be rejected§!"
  RUS_modify_state_council_tt: "Shifts §YFaction Balance§! to the [RUS_which_side_modify]"
