--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6274,24 +6274,25 @@ ww1_USA.126.t:0 "End of the Paint Creek-Cabin Creek Strike"
 ww1_USA.126.d:0 "The infamous Paint Creek-Cabin Creek strike has finally came to end today with the announcement of the Kern Resolution being seen as an acceptable concession towards the workers. The strike has lead to the death of 75 people as well as martial law in the state of West Virginia. Needless to say, all parties involved are glad to see an end to the bloodshed."
 ww1_USA.126.a:0 ""
 ENG_finance_crisis:0 "Financial Strain of The Great War"
-ww1_usa.127.t:0 "Coal Wars Spread to Michigan!"
-ww1_usa.127.d:0 "Miners in Copper Country, located in the Upper Peninsula of Michigian, have gone on strike over various issues. These include almost tyrannical control over worker's lives due to the unfair policies in company towns, the one-man drill causing unsafe working conditions and unemployment, long hours, low wages, and the usage of children in mines. Those on strike joined the Western Federation of Miners, and a referendum was put into effect after 8,000 workers voted upon it, causing the local economy to collapse."
+ww1_USA.127.t:0 "Coal Wars Spread to Michigan!"
+ww1_USA.127.d:0 "Miners in Copper Country, located in the Upper Peninsula of Michigian, have gone on strike over various issues. These include almost tyrannical control over worker's lives due to the unfair policies in company towns, the one-man drill causing unsafe working conditions and unemployment, long hours, low wages, and the usage of children in mines. Those on strike joined the Western Federation of Miners, and a referendum was put into effect after 8,000 workers voted upon it, causing the local economy to collapse."
 ww1_england.265.t:0 "Financing The Entente"
+ ww1_USA.132.t:0 "Britain Pleads for us to Lift Ban on Loans"
 ww1_england.265.d:0 "As the country with the deepest financial markets and strongest credit rating, as well as the financial hub of the world, our dominions and allies have looked towards us as the financial backer of the war. Indeed, we do have an obligation to help our dominions at the minimum, and this won't be cheap. While the economic super power of the world, we do not have infinite money, and there is a real risk that if the war does not end quickly then we will have to take unwanted measures, like selling assets or even getting loans from the Americans."
 ww1_england.265.a:0 "Not a problem, the war will be over by Christmas"
-ww1_usa.127.a:0 "We need action!"
-ww1_usa.128.t:0 "End of the Copper Country Strike"
-ww1_usa.128.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
-ww1_usa.128.a:0 ""
-ww1_usa.129.t:0 "Coal Mine Strike begins in Colorado!"
-ww1_usa.129.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
-ww1_usa.129.a:0 ""
-ww1_usa.130.t:0 "Battles fought in Colorado Strikes"
-ww1_usa.130.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
-ww1_usa.130.a:0 ""
-ww1_usa.131.t:0 "End of the Colorado Coal Strikes"
-ww1_usa.131.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
-ww1_usa.131.a:0 ""
+ww1_USA.127.a:0 "We need action!"
+ww1_USA.128.t:0 "End of the Copper Country Strike"
+ww1_USA.128.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
+ww1_USA.128.a:0 ""
+ww1_USA.129.t:0 "Coal Mine Strike begins in Colorado!"
+ww1_USA.129.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
+ww1_USA.129.a:0 ""
+ww1_USA.130.t:0 "Battles fought in Colorado Strikes"
+ww1_USA.130.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
+ww1_USA.130.a:0 ""
+ww1_USA.131.t:0 "End of the Colorado Coal Strikes"
+ww1_USA.131.d:0 "LOC WRITERS DO YOUR FUCKING JOB"
+ww1_USA.131.a:0 ""
 ww1_USA_wilson.26.t:0 "A National Day of Praying For the End of The Great War?"
 ww1_USA_wilson.26.d:0 "With the reality that the Great War in Europe is not going to end any time soon setting in, the general mood of America is that of disappointment in the failure of a peaceful option. Most in America simply wish for a peace deal with no territorial changes, and for Europe to sort out its rivarlies./n/nPresident Wilson also shares these feelings, and despite his attempts to bring Europe together for a peace treaty, Europes leaders have only responded with half hearted responses or no response at all. Thus, Wilson has personally thought of the idea of declaring a day for prayer of peace in Europe. Of course theres no chance Europe will seek out a peaceful end to the war at this point, but declaring a day for prayer of peace would be a nice symbolic gesture to Americas commitment for world peace, and its commitment to neutrality."
 ww1_USA_wilson.26.a:0 "Lets do it, history will know America is a nation of peace"
