--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6280,6 +6280,7 @@ ww1_USA.68.c:0 "Let's shift talks towards a commercial treaty"
  ww1_usa.129.a:0 "We will resist their attempt"
  ww1_usa.129.b:0 "Who cares lmao"
  ww1_usa.129.c:0 "You can have some autonomy there."
+USA_economic_downturn7:0 "Benefit of Economic Loans"
  ww1_USA.130.t:0 "Withdrawal from the Philippines"
  ww1_USA.130.d:0 "A military operation to thwart Philippine independence attempts has failed. The islands of the Philippines is out of control of the military."
  ww1_USA.130.a:0 "Damn it."
