--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8893,7 +8893,13 @@ FRA_effect_if_law_fail:0 "\n§REffect if the vote fail :§!"
 
 FRA_fufill_schneider_contract:0 "Fulfill Schneider Contract"
 FRA_fufill_schneider_contract_desc:0 "The government awarded the company Schneider Creusot and its sub-subsidiary Somua a contract to produce 400 medium combat tanks intended to complete the mechanized force validated by the general staff."
+
+FRA_fufill_renault_contract:0 "Fulfill Renault Contract"
+FRA_fufill_renault_contract_desc:0 "The government ordered 1,850 Renault FT tanks from the Renault company intended to constitute several armored regiments. This essential mission must be accomplished at the risk of weakening the motivation of our soldiers on the front."
+
+light_tanks_on_the_field:0 "([?num_equipment_in_armies@light_tank_chassis] §YLight Tanks§! are actually on the field)"
 medium_tanks_on_the_field:0 "([?num_equipment_in_armies@medium_tank_chassis] §YMedium Tanks§! are actually on the field)"
-FRA_produce_400_schneider_tanks:0 "400 §YMedium Tanks§! are on the field"
+FRA_produce_400_schneider_tanks:0 "400 §YMedium Tanks§! are on the field (or in stockpile)"
+FRA_produce_1850_light_tanks:0 "1850 §YLight Tanks§! are on the field (or in stockpile)"
 
 to_complete_mission:0 "§YTo Complete the Mission:§!"
