--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8897,9 +8897,7 @@ FRA_fufill_schneider_contract_desc:0 "The government awarded the company Schneid
 FRA_fufill_renault_contract:0 "Fulfill Renault Contract"
 FRA_fufill_renault_contract_desc:0 "The government ordered 1,850 Renault FT tanks from the Renault company intended to constitute several armored regiments. This essential mission must be accomplished at the risk of weakening the motivation of our soldiers on the front."
 
-light_tanks_on_the_field:0 "([?num_equipment_in_armies@light_tank_chassis] §YLight Tanks§! are actually on the field)"
-medium_tanks_on_the_field:0 "([?num_equipment_in_armies@medium_tank_chassis] §YMedium Tanks§! are actually on the field)"
-FRA_produce_400_schneider_tanks:0 "400 §YMedium Tanks§! are on the field (or in stockpile)"
-FRA_produce_1850_light_tanks:0 "1850 §YLight Tanks§! are on the field (or in stockpile)"
+FRA_light_tanks_on_the_field:0 "[?num_equipment_in_armies@light_tank_chassis]/1850 §YLight Tanks§! on the field (or in stockpile)"
+FRA_medium_tanks_on_the_field:0 "[?num_equipment_in_armies@medium_tank_chassis]/400 §YMedium Tanks§! on the field (or in stockpile)"
 
 to_complete_mission:0 "§YTo Complete the Mission:§!"
