Loans to the Entente - TBC

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2255,7 +2255,7 @@ USA_divided_republican_party:0 "Divided Republican Party"
  USA_unstable_banking_system:0 "Unstable Banking System"
  USA_company_ventures_in_the_americas1:0 "Company Ventures in the Americas"
  USA_mexican_raids1:0 "Mexican Raids"
- USA_alcoholism:0 "Alcoholism"
+ USA_alcoholism:0 "Rampart Alcoholism"
  USA_child_labour:0 "Child Labour"
  USA_company_monopolies1:0 "Company Monopolies"
  USA_land_of_inventors:0 "Land of Inventors"
